--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,9 +18,10 @@
         </form>
     </div>
       <p>
-    <a href="#">Forgot Password?</a> |
+    <a href="forgetpassword.html">Forgot Password?</a> |
     <a href="reg.html">Registration</a>
   </p>
 
 </body>
+
 </html>
